# TurbuStat

./: .coveragerc  .gitignore  .readthedocs.yml  .rtd-environment.yml  .travis.yml  CHANGE.rst  LICENSE  MANIFEST.in  README.md  README.rst  computed_distances.npz  exec_allruns.sh  kl_divergence.py  lenth.py  output.py  overall_wrapper.py  pyproject.toml  setup.cfg  setup.py  tox.ini  utilities.py
.github/workflows/: main.yml  python-publish.yml
Examples/: FactorialAnalysis.R  GetVals.py  MetricValidationLinearModel.r  analysis_pipeline.py  batch_data_reduction.py  complete_comparisons.py  effect_plots.py  exec_allruns.sh  exec_mvc.py  exec_wav_transform.py  make_distance_plots.py  make_obs_tables.py  noise_validation.r  output.py  output_single_timestep.py  overall_wrapper.py  pairwise_comparison.py  pspec_fit_with_noise_models.ipynb  pspec_with_noiseterm.ipynb  scaling_test.sh  scaling_tests.py  signal_validation.r  wrapper_2D_data.py
Examples/jasper/: complete_comparisons.py  complete_dendrograms.pbs  complete_dendrograms.py  complete_to_complete.pbs  complete_to_fid.pbs  des_to_complete.pbs  fiducial0_all.pbs  fiducial0_all_noise.pbs  fiducial1_all.pbs  fiducial1_all_noise.pbs  fiducial2_all.pbs  fiducial2_all_noise.pbs  fiducial3_all.pbs  fiducial3_all_noise.pbs  fiducial4_all.pbs  fiducial4_all_noise.pbs  fiducial_comp.pbs  fiducial_comp_noise.pbs  make_moments.pbs  make_moments_noise.pbs  mask_moments_complete.pbs  output.py  output_mpi.py  output_mpi_load.py  reduce_and_save_moments.py  run_all.sh  run_test.pbs
Examples/pairwise/: interruptible_pool.py  pairs_design_1.pbs  pairs_design_2.pbs  pairs_design_3.pbs  pairs_design_4.pbs  pairs_design_5.pbs  pairs_design_6.pbs  pairs_design_7.pbs  pairs_design_8.pbs  pairs_fiducials.pbs  pairwise_comparison.py
Examples/paper_plots/: deltavar_3.0.txt  fBM_projection_figure.py  generate_fBM_models.py  make_fBM_moments.py  summarize_performance_tests.py  test_fBM_delvar_vs_idl.py  test_fBM_models_2D_plaw_fits.py  test_fBM_models_make_2Dimgs.py  test_fBM_models_slope_recovery.py  test_fBM_models_vca_pspec.py  test_fBM_models_vca_pspec_vel_4_dens_4.py  test_fBM_pca.py  test_fBM_wavelet_normalization.py
analysis/: comparison_plot.py  convert_results.py
cramer/: cramer.py
data_reduction/: batch_data_reduction.py  data_reduc.py
delta_variance/: delta_variance.py
dendrograms/: __init__.py  compute_dendro.py  dendro_stats.py  mecdf.py  run_dendro.sh
density_pdf/: density_pdf.py
docs/: Makefile  accepted_input_formats.rst  analysis.rst  conf.py  contributing.rst  cube_tools.rst  data_requirements.rst  generating_test_data.rst  helper_scripts.rst  index.rst  install.rst  moments.rst  preparing_simulated_data.rst  requirements.txt  rtd-pip-requirements  statistics.rst
docs/api/: turbustat.statistics.BiSpectrum.rst  turbustat.statistics.BiSpectrum_Distance.rst  turbustat.statistics.Cramer_Distance.rst  turbustat.statistics.DeltaVariance.rst  turbustat.statistics.DeltaVariance_Distance.rst  turbustat.statistics.DendroDistance.rst  turbustat.statistics.Dendrogram_Stats.rst  turbustat.statistics.Genus.rst  turbustat.statistics.GenusDistance.rst  turbustat.statistics.MVC.rst  turbustat.statistics.MVC_distance.rst  turbustat.statistics.Mahalanobis.rst  turbustat.statistics.Mahalanobis_Distance.rst  turbustat.statistics.PCA.rst  turbustat.statistics.PCA_Distance.rst  turbustat.statistics.PDF.rst  turbustat.statistics.PDF_Distance.rst  turbustat.statistics.PSpec_Distance.rst  turbustat.statistics.PowerSpectrum.rst  turbustat.statistics.SCF.rst  turbustat.statistics.SCF_Distance.rst  turbustat.statistics.StatMoments.rst  turbustat.statistics.StatMomentsDistance.rst  turbustat.statistics.Tsallis.rst  turbustat.statistics.Tsallis_Distance.rst  turbustat.statistics.VCA.rst  turbustat.statistics.VCS.rst  (+5 more)
genus/: __init__.py  genus.py
mahalanobis/: mahalanobis.py
mvc/: exec_mvc.py  mvc.py
pca/: pca.py
pspec_bispec/: __init__.py  psds.py  pspec_bispec.py  radialProfile.py  radial_data.py
scf/: scf.py
stat_moments/: __init__.py  highstatmoments.py
tsallis/: __init__.py  tsallis.py
turbustat/: __init__.py  _astropy_init.py  conftest.py  version.py
vca_vcs/: __init__.py  vca.py  vca_vcs.py  vcs.py
wavelets/: __init__.py  wavelet_transform.py
(+388 files in other folders)
