[metadata]
name = turbustat
description = Statistics of Turbulence
long_description = This package implements tools for the comparison of radio data cubes.
author = TurbuStat Development Team
author_email = koch.eric.w@gmail.com
license = MIT
url = https://turbustat.readthedocs.org
edit_on_github = False
github_project = Astroua/TurbuStat

[options]
zip_safe = False
packages = find:
install_requires =
    numpy>=1.7
    astropy>=2.0
    matplotlib>=1.2
    scipy>=0.21
    scikit-learn>=0.13
    statsmodels>=0.4.0
    scikit-image>=0.12
    cython>=0.2

[options.extras_require]
test =
    pytest-astropy
    pytest-cov
docs =
    sphinx-astropy
    sphinx_bootstrap_theme
all =
    spectral_cube
    radio_beam
    astrodendro
    emcee
    pyfftw

[options.package_data]
turbustat.tests = data/*

[upload_docs]
upload-dir = docs/_build/html
show-response = 1

[tool:pytest]
minversion = 3.0
norecursedirs = build docs/_build
doctest_plus = enabled
addopts = -p no:warnings
