[metadata]
name = turbustat
description = Statistics of Turbulence
long_description = This package implements tools for the comparison of radio data cubes.
author = TurbuStat Development Team
author_email = koch.eric.w@gmail.com
license = MIT
url = https://turbustat.readthedocs.org
edit_on_github = False
github_project = Astroua/TurbuStat

[options]
zip_safe = False
packages = find:
setup_requires = setuptools_scm
install_requires =
    numpy>=1.7
    astropy>=2.0
    matplotlib>=1.2
    scipy>=0.21
    scikit-learn>=0.13
    statsmodels>=0.4.0
    scikit-image>=0.12
    spectral_cube

[options.extras_require]
test =
    pytest-astropy
    pytest-cov
    spectral_cube
    radio_beam
docs =
    sphinx-astropy
    sphinx_bootstrap_theme
all =
    astrodendro
    emcee
    pyfftw

[options.package_data]
turbustat.tests = data/*

[upload_docs]
upload-dir = docs/_build/html
show-response = 1

[tool:pytest]
testpaths = "turbustat" "docs"
astropy_header = true
doctest_plus = enabled
text_file_format = rst
addopts = --doctest-rst
