[metadata]
name = turbustat
description = Statistics of Turbulence
long_description = This package implements tools for the comparison of radio data cubes.
author = TurbuStat Development Team
author_email = koch.eric.w@gmail.com
license = MIT
url = https://turbustat.readthedocs.org
edit_on_github = False
github_project = Astroua/TurbuStat

[options]
zip_safe = False
packages = find:
setup_requires = setuptools_scm
install_requires =
    numpy>=1.7
    astropy>=2.0
    matplotlib>=1.2
    scipy>=0.21
    scikit-learn>=0.13
    statsmodels>=0.4.0
    scikit-image>=0.12
    spectral_cube

[extension-helpers]
use_extension_helpers = true

[options.extras_require]
test =
    pytest-astropy
    pytest-cov
    spectral_cube
    radio_beam
docs =
    sphinx-astropy
    sphinx_bootstrap_theme
all =
    astrodendro
    emcee
    pyfftw

[options.package_data]
turbustat.tests = data/*

[tool:pytest]
testpaths = "turbustat" "docs"
astropy_header = true
doctest_plus = enabled
text_file_format = rst
addopts = --doctest-rst

[coverage:run]
omit =
    turbustat/__init__*
    turbustat/conftest.py
    turbustat/*setup_package*
    turbustat/tests/*
    turbustat/*/tests/*
    turbustat/extern/*
    turbustat/version*
    */turbustat/_astropy_init*
    */turbustat/conftest.py
    */turbustat/*setup_package*
    */turbustat/tests/*
    */turbustat/*/tests/*
    */turbustat/extern/*
    */turbustat/version*
    */turbustat/tests/test_*
    */turbustat/extern/*
    */turbustat/utils/compat/*
    */turbustat/version*
    */turbustat/wcs/docstrings*
    */turbustat/_erfa/*

[coverage:report]
exclude_lines =
    # Have to re-enable the standard pragma
    pragma: no cover

    # Don't complain about packages we have installed
    except ImportError

    # Don't complain if tests don't hit assertions
    raise AssertionError
    raise NotImplementedError

    # Don't complain about script hooks
    def main\(.*\):

    # Ignore branches that don't pertain to this version of Python
    pragma: py{ignore_python_version}

    # Don't complain about IPython completion helper
    def _ipython_key_completions_